2008-10-02  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431462 - Code
	  completion generally unusable with with 'using' aliases'.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBindingCompilerManager.cs: Track API.

2008-09-29  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/MemberCompletionData.cs: Fix NRE that broke completion.

2008-09-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/CSharpAutotoolsSetup.cs: Fix bug #394501 - tarball
	  generated don't add -keyfile:<strong_name_file>.snk in MAKE command
	  in Makefile.in.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 430393 - "// test/"
	  generates <summary> comment'.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: moved obsolete members at the bottom of
	  the list.

2008-09-26  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/NRefactoryParser.cs: Track API.

2008-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs: Properly read and store the "warnings as
	  errors" flag.
	* Project/CSharpCompilerParameters.cs: Added PlatformTarget property.
	  Other minor fixes.

2008-09-26  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpAmbience.cs: Worked on csharp ambience.

2008-09-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/NRefactoryParser.cs: Track API.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpAmbience.cs: fixed 'Bug 424499 - Member list should display
	  normal members and explicitly implemented members differently'.

2008-09-24  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/NRefactoryParser.cs: Fix line/column of errors.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed anonymous type bug.

2008-09-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/CSharpTextEditorCompletion.cs: Show