@@ -1,3 +1,8 @@
+2008-10-06  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/CSharpTextEditorCompletion.cs: Updated xml comment tag
+	  descriptions from ECMA 364.
+
 2008-10-02  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431462 - Code
